GNOME Bugzilla – Bug 738845
audiomixer: critical error for blocksize, timeout min/max values
Last modified: 2014-10-24 14:28:00 UTC
Audiomixer blocksize, cant be 0, hence adjusting the minimum value to 1 timeout value of aggregator is defined with MAX of MAXINT64, but it cannot cross G_MAXLONG * GST_SECOND - 1 Hence changed the max value of the same
Created attachment 288886 [details] [review] proposed patch
Review of attachment 288886 [details] [review]: ::: gst-libs/gst/base/gstaggregator.c @@ +1421,3 @@ "Number of nanoseconds to wait for a buffer to arrive on a sink pad" "before the pad is deemed unresponsive (-1 unlimited)", -1, + G_MAXLONG * GST_SECOND - 1, DEFAULT_TIMEOUT, This will overflow on 64 bit systems where long is 64 bits big. Just keep it as is :)
is there any other way to resolve this error? any value above G_MAXLONG * GST_SECOND - 1 will result in the below error. GStreamer:ERROR:gstpoll.c:1242:gst_poll_wait: assertion failed: ("Value of time " "timeout" " is out of timespec's range" && ((timeout) / GST_SECOND) < G_MAXLONG)
Just take the value that is used inside gstpoll.c:1242
Created attachment 288935 [details] [review] audiomixer critical error
commit aec1f2a001cde486c58c42b76feec62bcefab870 Author: Vineeth T M <vineeth.tm@samsung.com> Date: Mon Oct 20 18:25:08 2014 +0530 audiomixer: critical error for blocksize, timeout min/max values Audiomixer blocksize, cant be 0, hence adjusting the minimum value to 1 timeout value of aggregator is defined with MAX of MAXINT64, but it cannot cross G_MAXLONG * GST_SECOND - 1 Hence changed the max value of the same https://bugzilla.gnome.org/show_bug.cgi?id=738845
Thanks for the review Sebastian :)